fixed text box overflow

--- a/HomePageStyleSheet.css
+++ b/HomePageStyleSheet.css
@@ -7,13 +7,7 @@
 .loadMore{grid-area: loadMore;}
 .pictures{grid-area: pictures;}
 .Galesiboard{
-  grid-template-areas:
-    'Galesiboard' 'pictures'
-    'descriptionBox'
-    'button'
-    'featureHeader'
-    'allFeatures'
-    'loadmore';
+  
 }
 
 .featureHeader{
@@ -61,11 +55,12 @@
   border-radius: 1em;
   vertical-align: middle;
   display: flex;
-  height: 150px;
+  /*height: 150px;*/
   align-items: center;
   justify-content: center;
   font-family: Garamond, Baskerville, "Baskerville Old Face", "Hoefler Text", "Times New Roman", serif;
   margin: 50px;
+  grid-area: description;
 }
 .descriptionBox:hover{
   background-color: #9ac53dad;
@@ -149,35 +144,36 @@
 
 .wrapper{
   display: grid;
-  grid-template-columns: 1fr 1fr 1fr 1fr;
-  grid-template-rows: 1fr 1fr 1fr;
+  /*grid-template-columns: 1fr 1fr 1fr 1fr;*/
   grid-auto-rows:minmax(100px, auto);
+  grid-template-areas:
+    'title title pictures'
+    'description description pictures'
+    ;
 }
 .Galesiboard{
-  grid-column: 1/4;
+  /*grid-column: 1/4;
   grid-row: 1/2;
-  /*display: flex;*/
+  display: flex;*/
   justify-self: center;
   align-self: center;
 }
 
 .GalesiLED
 {
-  grid-column: 1/4;
+  /*grid-column: 1/4;
   grid-row: 1/2;
-  /*display: flex;*/
+  display: flex;*/
+  grid-area: title;
   justify-self: center;
   align-self: center;
 }
 
 .w3-content{
-  grid-column: 4/5;
-  grid-row: 1/4;
+  grid-area: pictures;
+  /*grid-column: 4/5;
+  grid-row: 1/4;*/
 }
 
-.descriptionBox{
-  grid-column: 1/4;
-  grid-row: 2/4;
-  /*display: flex;*/
-}
+
 }
